EDU-639 Improve tooltip text for random tests

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -409,6 +409,6 @@ reset:
   en: Reset
   de: Zurücksetzen
 randomizedTests:
-  en: The tests are randomised
-  de: Die Tests sind randomisiert
+  en: The tests are arranged in random order
+  de: Die Tests sind in einer zufälligen Reihenfolge angeordnet
 
