--- a/src/components/used-storage.yml
+++ b/src/components/used-storage.yml
@@ -1,6 +1,6 @@
 label:
-  en: Used
-  de: Benutzt
+  en: Used storage
+  de: Genutztem Speicherplatz
 storageSpaceExceeded:
   en: Exceedance
   de: Überschreitung
