EDU-665 Correct German text

--- a/src/components/used-storage.yml
+++ b/src/components/used-storage.yml
@@ -1,6 +1,6 @@
 label:
   en: Used storage
-  de: Genutztem Speicherplatz
+  de: Genutzter Speicherplatz
 storageSpaceExceeded:
   en: Exceedance
   de: Überschreitung
