--- a/src/components/files-upload-overview.yml
+++ b/src/components/files-upload-overview.yml
@@ -1,6 +1,6 @@
 headline:
   en: Files upload
-  de: Dateien Hochladen
+  de: Datei-Upload
 uploadLimitExceeded:
   en: Upload limit of {uploadLimit} is exceeded. Your upload size is {uploadSize}.
   de: Uploadbegrenzung von {uploadLimit} ist überschritten. Ihre Uploadgröße ist {uploadSize}.
