EDU-682 Rename lessonsMode to documentsMode

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -183,7 +183,7 @@ accessType_public:
 accessType_private:
   en: private
   de: privat
-lessonsMode:
+documentsMode:
   en: Lessons handling mode
   de: Einheiten-Bearbeitungsmodus
 lessonsMode_exclusive:
