--- a/src/components/room-metadata-form.yml
+++ b/src/components/room-metadata-form.yml
@@ -1,7 +1,7 @@
 roomNameRequired:
   en: Please specify a room name
   de: Bitte geben Sie einen Raumnamen an
-accessLevelInfo:
+accessInfo:
   en: Public rooms are visible to all users, private rooms only to room members.
   de: Öffentliche Räume sind für alle Benutzer sichtbar, private Räume nur für Raummitglieder.
 lessonsModeInfo:
