EDU-682 Remove lessons modules

--- a/src/components/room-metadata-form.yml
+++ b/src/components/room-metadata-form.yml
@@ -4,6 +4,6 @@ roomNameRequired:
 accessInfo:
   en: Public rooms are visible to all users, private rooms only to room members.
   de: Öffentliche Räume sind für alle Benutzer sichtbar, private Räume nur für Raummitglieder.
-lessonsModeInfo:
-  en: In exclusive room lessons can be managed only by the owner, in collaborative rooms by all room members.
-  de: In exklusiven Räumen können Unterrischtseinheiten nur von den Besitzern verwaltet werden, in kollaborativen Räumen von allen Raummitgliedern.
+documentsModeInfo:
+  en: In exclusive room documents can be managed only by the owner, in collaborative rooms by all room members.
+  de: In exklusiven Räumen können Dokumente nur von den Besitzern verwaltet werden, in kollaborativen Räumen von allen Raummitgliedern.
