--- a/src/components/storage-location.yml
+++ b/src/components/storage-location.yml
@@ -7,6 +7,12 @@ filesView_grid:
 publicStorageWarning:
   en: This directory is publicly accessible
   de: Dieses Verzeichnis ist öffentlich zugänglich
+searchResultInfo:
+  en: You are seeing results for the search term <0>{searchTerm}</0>
+  de: Sie sehen Ergebnisse für den Suchbegriff <0>{searchTerm}</0>
+closeSearchResult:
+  en: Back to directory view
+  de: Zurück zur Verzeichnisansicht
 uploadFiles:
   en: Upload files
   de: Dateien hochladen
