EDU-682 Improve translation

--- a/src/components/document-metadata-modal.yml
+++ b/src/components/document-metadata-modal.yml
@@ -40,6 +40,6 @@ sequenceInfoBoxDescription:
     The date specified above is used as the first scheduling.
     A sequential number is appended to the title or URL path for each document.
   de: |
-    Hier können Sie mehrere Veranstaltungen gleichzeitig anlegen.
+    Hier können Sie mehrere Dokumente gleichzeitig anlegen.
     Das oben angegebenen Datum wird dabei als erster Termin verwendet.
     An den Titel bzw. URL-Pfad wird für jedes Dokument eine laufende Nummer angehängt.
