--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -165,6 +165,9 @@ owner:
 email:
   en: Email
   de: E-Mail
+emailAddress:
+  en: Email address
+  de: E-Mail-Adresse
 name:
   en: Name
   de: Name
@@ -213,9 +216,9 @@ id:
 user:
   en: User
   de: Benutzer
-username:
-  en: User name
-  de: Benutzername
+displayName:
+  en: Display name
+  de: Anzeigenamen
 password:
   en: Password
   de: Kennwort
