EDU-692 Correct German translations

--- a/src/components/login-form.yml
+++ b/src/components/login-form.yml
@@ -1,6 +1,6 @@
 enterEmail:
   en: Please enter your email address
-  de: Bitte geben Sie Ihre E-Mail-Adresse
+  de: Bitte geben Sie Ihre E-Mail-Adresse an
 enterPassword:
   en: Please enter your password
   de: Bitte geben Sie Ihr Kennwort an
