--- a/src/components/pages/login.yml
+++ b/src/components/pages/login.yml
@@ -7,4 +7,4 @@ hintContent:
     It continues to be shown as the name under which you author website content.
   de: |
     Der Benutzername kann nicht mehr für die Anmeldung benutzt werden.
-    Der bleibt als Autorennamen für alle von Ihnen bearbeiteten Website-Inhalt.
+    Er bleibt als Autorenname für alle von Ihnen bearbeiteten Website-Inhalte bestehen.
