--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -218,7 +218,7 @@ user:
   de: Benutzer
 displayName:
   en: Display name
-  de: Anzeigenamen
+  de: Anzeigename
 password:
   en: Password
   de: Kennwort
