NOTICKET: Correct typo

--- a/src/components/pages/user.yml
+++ b/src/components/pages/user.yml
@@ -1,3 +1,3 @@
 accountClosed:
   en: This user account was closed.
-  de: Dieses Benutzerkonto wirde geschlossen.
+  de: Dieses Benutzerkonto wurde geschlossen.
