--- a/src/components/favorites-tab.yml
+++ b/src/components/favorites-tab.yml
@@ -11,5 +11,14 @@ targetDeletedMessage:
   en: The target of this link has been deleted
   de: Das Ziel dieses Links wurde gelöscht
 info:
-  en: Here you can find all documents, rooms and users that you have marked as favorite.
-  de: Hier finden Sie alle Dokumente, Räume und Benutzer, die Sie als Favorit markiert haben.
+  en: Here you can find all users, rooms and documents that you have marked as favorite.
+  de: Hier finden Sie alle Benutzer, Räume und Dokumente, die Sie als Favorit markiert haben.
+favoriteUsers:
+  en: Favorite users
+  de: Favorite Benutzer
+favoriteRooms:
+  en: Favorite rooms
+  de: Favorite Räume
+favoriteDocuments:
+  en: Favorite documents
+  de: Favorite Dokumente
