EDU-704 Rephrase headlines and tooltips regarding favorites

--- a/src/components/favorite-star.yml
+++ b/src/components/favorite-star.yml
@@ -1,6 +1,6 @@
 removeFavorite:
   en: Remove from favorites
-  de: Aus den Favoriten entfernen
+  de: Von den Favoriten entfernen
 addFavorite:
   en: Add to favorites
-  de: Als Favorit hinzufügen
+  de: Zu den Favoriten hinzufügen
