--- a/src/plugins/multitrack-media/multitrack-media.yml
+++ b/src/plugins/multitrack-media/multitrack-media.yml
@@ -1,6 +1,6 @@
-mainTrackName:
-  en: Hauptspur
-  de: Main track
-secondaryTrackName:
+mainTrack:
+  en: Main track
+  de: Hauptspur
+secondaryTrack:
   en: Track {number}
   de: Spur {number}
